2006-06-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c (script_fu_add_script):
	use a canonical name for the automatically added run-mode parameter.
	Untabbified.

2006-06-16  Sven Neumann  <sven@gimp.org>

	* app/core/gimplist.c (gimp_list_new, gimp_list_new_weak): for
	debugging purposes, set the children type as the name of the list.

2006-06-16  Sven Neumann  <sven@gimp.org>

	* app/actions/debug-actions.c: no need to be extra concise here.

2006-06-16  Sven Neumann  <sven@gimp.org>

	* app/actions/image-commands.c (image_convert_cmd_callback):
	always call gimp_image_flush() so that the image mode radio
	buttons reflect the image state.  Attach the indexed conversion
	dialog to the shell to avoid multiple instances.

2006-06-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mapcolor.c (query): marked blurb for translation.

2006-06-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/colormap-remap.c: renamed to "Rearrange Colormap".

2006-06-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/rcm/rcm.c
	* plug-ins/rcm/rcm_dialog.c: renamed to "Rotate Colors"; it
	doesn't actually work on indexed images at all.

2006-06-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl

	* plug-ins/common/colormap-remap.c: added new plug-in for colormap
	manipulation written by Mukund Sivaraman.

2006-06-15  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c (gimp_image_convert): remove
	duplicate colors for all palette types (except for MAKE_PALETTE
	since there shouldn't be any unused colors then).  That's what
	the PDB documentation claims the function would be doing.

	* app/dialogs/convert-dialog.c: allow use of the "Remove unused
	colors" toggle for all but the optimized palette.

2006-06-15  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c (image_actions_update): improved
	code to set the image mode radio actions; set their sensitivity
	also.
